--- a/public/css/_colors.scss
+++ b/public/css/_colors.scss
@@ -14,7 +14,9 @@ $red: #9A4645;
 
 
 //new Color scheme blue and white and black
-	$blue:rgb(81, 144, 203);
+	$blue:#1EAAF1;
 	$white: rgb(246, 246, 246);
 	$black: rgb(3, 17, 27);
 		$op-black: rgba(3, 17, 27, 0.7);
+		$sup-op-black: rgba(3, 17, 27, 0.4);
+	$trout: #4B545B;
