--- a/public/css/_tools.scss
+++ b/public/css/_tools.scss
@@ -3,7 +3,6 @@
 }
 a, a:hover, a:visited{
 	text-decoration:none;
-
 	color:black;
 }
 html{
@@ -11,6 +10,5 @@ html{
 }
 body{
 	min-width:198px;
-
-	background-color: $gray;
+	background-color: $white;
 }
