--- a/public/html/views/about.html
+++ b/public/html/views/about.html
@@ -4,27 +4,13 @@
     <header class="mainHeader"><img src="https://avatars3.githubusercontent.com/u/16170598?v=3&amp;s=460" alt="A picture of me"/>
       <h1>About Me</h1>
     </header>
-    <article>
-      <header>
-        <section class="hidden left">
-          <h1 id="ls">Life Story</h1>
-        </section>
-        <section class="right">
-          <h1>Long Story Short</h1>
-        </section>
-      </header>
-      <article>
-        <p class="ls hidden">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p class="lss active">I'm cool.<i class="fa fa-angle-up" id="up"></i></p>
-      </article>
-    </article>
   </div>
   <div id="skills">
     <header>
       <h1>Skills</h1>
     </header>
     <h4 class="fEnd">FrontEnd</h4>
-    <section class="frontEnd"><img src="./img/frontEndPic.jpg"/>
+    <section class="frontEnd"><img class="disp" src="./img/frontEndMan.jpg"/>
       <ul>
         <li><img src="./img/HTML5.png"/>
           <h4>HTML5 / Jade / Pug</h4>
@@ -50,7 +36,7 @@
       </ul>
     </section>
     <h4 class="bEnd">back_End</h4>
-    <section class="backEnd"><img src="./img/backendPic.jpeg"/>
+    <section class="backEnd"><img class="disp" src="./img/backendPic.jpeg"/>
       <ul>
         <li><img src="./img/sql.png"/>
           <h4>Sql / Postgress</h4>
