--- a/public/css/_contact.css
+++ b/public/css/_contact.css
@@ -1,20 +1,39 @@
 /*
-Error: Undefined variable: "$white".
-        on line 13 of _tools.scss
+Error: Undefined variable: "$highlight-shadow".
+        on line 17 of _contact.scss
 
-8: html{
-9: 	min-width:198px;
-10: }
-11: body{
-12: 	min-width:198px;
-13: 	background-color: $white;
-14: }
+12: 
+13: 		border-top-left-radius:0.3vw;
+14: 		border-top-right-radius:0.3vw;
+15: 		border-bottom-right-radius:0.2vw;
+16: 		background-color:white;
+17: 		box-shadow:0.2vw 0.2vw 3vw $highlight-shadow;
+18: 		.bar{
+19: 			position: absolute;
+20: 			bottom:-5vh;
+21: 
+22: 			clear:both;
 
 Backtrace:
-_tools.scss:13
+_contact.scss:17
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/variable.rb:49:in `_perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/node.rb:58:in `perform'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/list_literal.rb:63:in `block in _perform'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/list_literal.rb:63:in `map'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/list_literal.rb:63:in `_perform'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/node.rb:58:in `perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:397:in `visit_prop'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `block in with_base'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:115:in `with_frame'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `with_base'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `block (2 levels) in visit_rule'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `map'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:433:in `block in visit_rule'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:181:in `with_environment'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:431:in `visit_rule'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `block in with_base'
@@ -63,4 +82,4 @@ _tools.scss:13
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$white\".\A         on line 13 of _tools.scss\A \A 8: html{\A 9: 	min-width:198px;\A 10: }\A 11: body{\A 12: 	min-width:198px;\A 13: 	background-color: $white;\A 14: }"; }
+  content: "Error: Undefined variable: \"$highlight-shadow\".\A         on line 17 of _contact.scss\A \A 12: \A 13: 		border-top-left-radius:0.3vw;\A 14: 		border-top-right-radius:0.3vw;\A 15: 		border-bottom-right-radius:0.2vw;\A 16: 		background-color:white;\A 17: 		box-shadow:0.2vw 0.2vw 3vw $highlight-shadow;\A 18: 		.bar{\A 19: 			position: absolute;\A 20: 			bottom:-5vh;\A 21: \A 22: 			clear:both;"; }
