--- a/public/css/_header.css
+++ b/public/css/_header.css
@@ -1,17 +1,21 @@
 /*
-Error: Undefined variable: "$white".
-        on line 13 of _tools.scss
+Error: Undefined variable: "$op-black".
+        on line 12 of _header.scss
 
-8: html{
-9: 	min-width:198px;
-10: }
-11: body{
-12: 	min-width:198px;
-13: 	background-color: $white;
-14: }
+7: 
+8: 	width:100vw;
+9: 	height:20vh;
+10: 	margin-bottom:5vh;
+11: 
+12: 	background:$op-black;
+13: 
+14: 	align-items:center;
+15: 	h1{
+16: 		width:100vw;
+17: 		// text-shadow:0px 0px 0 rgb(-27,-27,-27),-1px 1px 0 rgb(-31,-31,-31),-2px 2px 0 rgb(-34,-34,-34),-3px 3px 0 rgb(-38,-38,-38),-4px 4px 0 rgb(-41,-41,-41),-5px 5px 0 rgb(-44,-44,-44),-6px 6px 0 rgb(-48,-48,-48),-7px 7px 0 rgb(-51,-51,-51),-8px 8px 0 rgb(-55,-55,-55),-9px 9px 0 rgb(-58,-58,-58),-10px 10px 0 rgb(-61,-61,-61),-11px 11px 0 rgb(-65,-65,-65),-12px 12px 0 rgb(-68,-68,-68),-13px 13px 0 rgb(-72,-72,-72),-14px 14px 0 rgb(-75,-75,-75),-15px 15px 0 rgb(-78,-78,-78),-16px 16px 0 rgb(-82,-82,-82),-17px 17px 0 rgb(-85,-85,-85),-18px 18px 0 rgb(-89,-89,-89),-19px 19px 0 rgb(-92,-92,-92),-20px 20px 0 rgb(-95,-95,-95),-21px 21px 0 rgb(-99,-99,-99),-22px 22px 0 rgb(-102,-102,-102),-23px 23px 0 rgb(-106,-106,-106),-24px 24px 0 rgb(-109,-109,-109),-25px 25px 0 rgb(-112,-112,-112),-26px 26px 0 rgb(-116,-116,-116),-27px 27px 0 rgb(-119,-119,-119),-28px 28px 0 rgb(-123,-123,-123),-29px 29px 0 rgb(-126,-126,-126),-30px 30px 0 rgb(-129,-129,-129),-31px 31px 0 rgb(-133,-133,-133),-32px 32px 0 rgb(-136,-136,-136),-33px 33px 0 rgb(-140,-140,-140),-34px 34px 0 rgb(-143,-143,-143),-35px 35px 0 rgb(-146,-146,-146),-36px 36px 0 rgb(-150,-150,-150),-37px 37px 0 rgb(-153,-153,-153),-38px 38px 0 rgb(-157,-157,-157),-39px 39px 0 rgb(-160,-160,-160), -40px 40px 0 rgb(-163,-163,-163),-41px 41px 40px rgba(0,0,0,0.15),-41px 41px 1px rgba(0,0,0,0.5),0px 0px 40px rgba(0,0,0,.2);
 
 Backtrace:
-_tools.scss:13
+_header.scss:12
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/variable.rb:49:in `_perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/node.rb:58:in `perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:397:in `visit_prop'
@@ -63,4 +67,4 @@ _tools.scss:13
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$white\".\A         on line 13 of _tools.scss\A \A 8: html{\A 9: 	min-width:198px;\A 10: }\A 11: body{\A 12: 	min-width:198px;\A 13: 	background-color: $white;\A 14: }"; }
+  content: "Error: Undefined variable: \"$op-black\".\A         on line 12 of _header.scss\A \A 7: \A 8: 	width:100vw;\A 9: 	height:20vh;\A 10: 	margin-bottom:5vh;\A 11: \A 12: 	background:$op-black;\A 13: \A 14: 	align-items:center;\A 15: 	h1{\A 16: 		width:100vw;\A 17: 		// text-shadow:0px 0px 0 rgb(-27,-27,-27),-1px 1px 0 rgb(-31,-31,-31),-2px 2px 0 rgb(-34,-34,-34),-3px 3px 0 rgb(-38,-38,-38),-4px 4px 0 rgb(-41,-41,-41),-5px 5px 0 rgb(-44,-44,-44),-6px 6px 0 rgb(-48,-48,-48),-7px 7px 0 rgb(-51,-51,-51),-8px 8px 0 rgb(-55,-55,-55),-9px 9px 0 rgb(-58,-58,-58),-10px 10px 0 rgb(-61,-61,-61),-11px 11px 0 rgb(-65,-65,-65),-12px 12px 0 rgb(-68,-68,-68),-13px 13px 0 rgb(-72,-72,-72),-14px 14px 0 rgb(-75,-75,-75),-15px 15px 0 rgb(-78,-78,-78),-16px 16px 0 rgb(-82,-82,-82),-17px 17px 0 rgb(-85,-85,-85),-18px 18px 0 rgb(-89,-89,-89),-19px 19px 0 rgb(-92,-92,-92),-20px 20px 0 rgb(-95,-95,-95),-21px 21px 0 rgb(-99,-99,-99),-22px 22px 0 rgb(-102,-102,-102),-23px 23px 0 rgb(-106,-106,-106),-24px 24px 0 rgb(-109,-109,-109),-25px 25px 0 rgb(-112,-112,-112),-26px 26px 0 rgb(-116,-116,-116),-27px 27px 0 rgb(-119,-119,-119),-28px 28px 0 rgb(-123,-123,-123),-29px 29px 0 rgb(-126,-126,-126),-30px 30px 0 rgb(-129,-129,-129),-31px 31px 0 rgb(-133,-133,-133),-32px 32px 0 rgb(-136,-136,-136),-33px 33px 0 rgb(-140,-140,-140),-34px 34px 0 rgb(-143,-143,-143),-35px 35px 0 rgb(-146,-146,-146),-36px 36px 0 rgb(-150,-150,-150),-37px 37px 0 rgb(-153,-153,-153),-38px 38px 0 rgb(-157,-157,-157),-39px 39px 0 rgb(-160,-160,-160), -40px 40px 0 rgb(-163,-163,-163),-41px 41px 40px rgba(0,0,0,0.15),-41px 41px 1px rgba(0,0,0,0.5),0px 0px 40px rgba(0,0,0,.2);"; }
