--- a/public/html/views/about.pug
+++ b/public/html/views/about.pug
@@ -3,22 +3,12 @@
 		header.mainHeader
 			img(src="https://avatars3.githubusercontent.com/u/16170598?v=3&s=460", alt="A picture of me")
 			h1 About Me
-		article
-			header
-				section.hidden.left
-					h1#ls Life Story
-				section.right
-					h1 Long Story Short
-			article
-				p.ls.hidden Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				p.lss.active I'm cool.
-					i.fa.fa-angle-up#up
 	#skills
 		header
 			h1 Skills
 		h4.fEnd FrontEnd
 		section.frontEnd
-			img(src="./img/frontEndPic.jpg")
+			img(src="./img/frontEndMan.jpg").disp
 			ul
 				li
 					img(src="./img/HTML5.png")
@@ -43,7 +33,7 @@
 					h4 Git / Github
 		h4.bEnd back_End
 		section.backEnd
-			img(src="./img/backendPic.jpeg")
+			img(src="./img/backendPic.jpeg").disp
 			ul
 				li
 					img(src="./img/sql.png")
