html and scss++ for proj page

--- a/public/html/views/proj.html
+++ b/public/html/views/proj.html
@@ -1,2 +1,30 @@
 
-<h1>Proj</h1>
+<div id="projPage">
+  <div class="card">
+    <section class="body"><img src="./img/bNural.png" alt="A broken pic.."/>
+      <article>
+        <h4>bNural</h4>
+        <p>Is a site that I built for my no-server project at DevMountain.</p>
+        <p>It allows the user to generate Binaural beats to control their mood.</p>
+      </article>
+    </section>
+  </div>
+  <div class="card">
+    <section class="body"><img src="./img/bNural.png" alt="A broken pic.."/>
+      <article>
+        <h4>bNural</h4>
+        <p>Is a site that I built for my no-server project at DevMountain.</p>
+        <p>It allows the user to generate Binaural beats to control their mood.</p>
+      </article>
+    </section>
+  </div>
+  <div class="card">
+    <section class="body"><img src="./img/bNural.png" alt="A broken pic.."/>
+      <article>
+        <h4>bNural</h4>
+        <p>Is a site that I built for my no-server project at DevMountain.</p>
+        <p>It allows the user to generate Binaural beats to control their mood.</p>
+      </article>
+    </section>
+  </div>
+</div>
