--- a/public/html/views/proj.pug
+++ b/public/html/views/proj.pug
@@ -1,1 +1,22 @@
-h1 Proj
+#projPage
+	.card
+		section.body
+			img(src="./img/bNural.png", alt="A broken pic..")
+			article
+				h4 bNural
+				p Is a site that I built for my no-server project at DevMountain.
+				p It allows the user to generate Binaural beats to control their mood.
+	.card
+		section.body
+			img(src="./img/bNural.png", alt="A broken pic..")
+			article
+				h4 bNural
+				p Is a site that I built for my no-server project at DevMountain.
+				p It allows the user to generate Binaural beats to control their mood.
+	.card
+		section.body
+			img(src="./img/bNural.png", alt="A broken pic..")
+			article
+				h4 bNural
+				p Is a site that I built for my no-server project at DevMountain.
+				p It allows the user to generate Binaural beats to control their mood.
