--- a/public/css/_colors.scss
+++ b/public/css/_colors.scss
@@ -15,6 +15,7 @@ $red: #9A4645;
 
 //new Color scheme blue and white and black
 	$blue:#1EAAF1;
+		$op-blue:rgba(#1eaaf1, 0.37);
 	$white: rgb(246, 246, 246);
 	$black: rgb(3, 17, 27);
 		$op-black: rgba(3, 17, 27, 0.7);
