--- a/public/css/master.css
+++ b/public/css/master.css
@@ -432,6 +432,56 @@ header#mainHeader {
       border-radius: 0.3vw;
       background-color: #3B3A3A; }
 
+#projPage {
+  width: 90vw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+  margin: 0 auto; }
+  #projPage .card {
+    width: 25vw;
+    display: flex;
+    flex-direction: column; }
+    #projPage .card header {
+      border: 2px #1EAAF1 solid;
+      width: 30vw;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      padding: 1vh; }
+    #projPage .card section.body {
+      border-top: 1px solid rgba(30, 170, 241, 0.37);
+      border-bottom-right-radius: 0.5vw;
+      border-bottom: 1px solid rgba(30, 170, 241, 0.37);
+      margin-top: 2vh;
+      display: flex;
+      justify-content: space-between;
+      align-items: center; }
+      #projPage .card section.body img {
+        width: 9vw;
+        border: 3px solid white;
+        box-shadow: 0.1vw 0.1vw 0.3vw rgba(3, 17, 27, 0.7);
+        transition: all 0.24s ease-in-out; }
+      #projPage .card section.body img:hover {
+        transform: scale(1.01);
+        cursor: pointer;
+        box-shadow: 0.3vw 0.3vw 0.5vw rgba(3, 17, 27, 0.4); }
+      #projPage .card section.body article {
+        width: 14vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: flex-left; }
+        #projPage .card section.body article h4 {
+          padding-bottom: 1.4vh;
+          text-shadow: -1px 1px rgba(3, 17, 27, 0.7);
+          font-size: 1.2em;
+          font-family: 'Julius Sans One', sans-serif; }
+        #projPage .card section.body article p {
+          padding-left: 0.5vw;
+          padding-bottom: 1.2vh; }
+
 #aboutPage {
   width: 95vw;
   margin: 0 auto;
