--- a/public/css/_proj.scss
+++ b/public/css/_proj.scss
@@ -1,26 +1,12 @@
 #projPage{
-	width:90vw;
 	display:flex;
 	flex-wrap:wrap;
 	justify-content:space-around;
 	align-items:flex-start;
 	margin:0 auto;
 	.card{
-		width:25vw;
 		display:flex;
 		flex-direction:column;
-
-		header{
-			border:2px $blue solid;
-			width:30vw;
-			display:flex;
-			justify-content:space-around;
-			align-items:center;
-			padding:1vh;
-			h2{
-
-			}
-		}
 		section.body{
 			border-top:1px solid $op-blue;
 			border-bottom-right-radius:0.5vw;
@@ -31,7 +17,6 @@
 			align-items:center;
 			img{
 
-				width:9vw;
 				border:3px solid white;
 				box-shadow:0.1vw 0.1vw 0.3vw $op-black;
 				transition:all 0.24s ease-in-out;
@@ -42,7 +27,6 @@
 				box-shadow:0.3vw 0.3vw 0.5vw $sup-op-black;
 			}
 			article{
-				width:14vw;
 				display:flex;
 				flex-direction:column;
 				justify-content:space-around;
@@ -61,6 +45,66 @@
 		}
 	}
 }
-@media only screen and (max-width: 425px) and (min-width:0px){}
+@media only screen and (max-width: 425px) and (min-width:0px){
+	#projPage{
+		width:100vw;
+		display:flex;
+		justify-content:space-around;
+		flex-direction:column;
+		align-items:flex-start;
+		margin:0 auto;
+		.card{
+			margin:0 auto;
+			margin-bottom:8vh;
+			width:80vw;
+			display:flex;
+			flex-direction:column;
+			justify-content:space-around;
+			section.body{
+				border-top:1px solid $op-blue;
+				border-bottom-right-radius:0.5vw;
+				border-bottom:1px solid $op-blue;
+				margin-top:2vh;
+				display:flex;
+				flex-direction:column;
+				justify-content:space-between;
+				align-items:center;
+				img{
+					margin:0 auto;
+					width:80vw;
+					border:3px solid white;
+					box-shadow:0.1vw 0.1vw 0.3vw $op-black;
+					transition:all 0.24s ease-in-out;
+				}
+				img:hover{
+					transform:scale(1.01);
+					cursor:pointer;
+					box-shadow:0.3vw 0.3vw 0.5vw $sup-op-black;
+				}
+				article{
+					padding-top:3vh;
+					width:70vw;
+					display:flex;
+					flex-direction:column;
+					justify-content:space-around;
+					align-items:flex-left;
+					padding-bottom:2vh;
+					h4{
+						padding-bottom:1.4vh;
+						text-shadow:-1px 1px $op-black;
+						font-size:1.2em;
+						font-family: 'Julius Sans One', sans-serif;
+					}
+					p{
+						padding-left:0.5vw;
+						padding-bottom:1.2vh;
+					}
+				}
+			}
+		}
+	}
+}
 @media only screen and (max-width: 768px) and (min-width: 426px){}
-@media only screen and (min-width: 769px){}
+@media only screen and (min-width: 769px){
+
+}
